Future Build 1.0.0.2

WebService Changes:

- added two parameters to addsqlusers to set the azure firewall rule
- added the ability to add sqlusers to the Azure-Database (Swagger GetAddSqlDbUser), so that Admins can connect via SSMS or Azure Data Studio 
- added a "JoinGroup" function to the Groupscontroller
- added a GM-Property (string username) to groups
- added a SINGroupSettings-Object to the DataModel for an upcomming online-settings-archive.
- searching for a group implemented by name, user, sinner
- corrected a Bug where POST to the repository did not change the Visibility of the character if updated.
- sinneruserright for uploading user will now be added if not existent
- uploading user is now checked if he/she actually may update a existing sinner
- added a SetUserRole-Call, so that Admins can set roles (like other Admins or "ArchetypeAdmin or whatever")
- added the ability to create a group (with name)
- found a bug that prevented uploading for none-admins (damn - I'm just used to have all the rights...)

Application Changes:

- Tags are now shown in the SinnersAdvanced-Tab
- fixed a bug where a new Id is given to an already uploaded character.
- removed the #ifdebug-braces, so that the SINners-Tab will be visible in release (SinnerSearch-Menuitem is still returning null in Release)
- fixed a bug that deleted the freshly downloaded characterfile while loading the charfile (yes, I was confused as well)
- after the Post of the metadata, now the actual file is uploaded as well in the SINnersBasic-Tab
- added a check, if a character is already uploaded before enabling the "open group dialog"-button
- Runtime now allows (or should allow) code from remote sources (plugin-dlls are not loaded otherwise under Windows-UAC)
- Globaloptions now saves which plugins are enabled in the registry
- Changing the URL of the Chummerhub-Repository in the options no longer crashes the program.