@@ -2,6 +2,8 @@ Future Build 1.0.0.2
 
 WebService Changes:
 
+- when retouring the groupmembers of a sinner, the sinner itself is now excluded from the result
+- the group of a character is now perserved even if he gets reposted
 - added two parameters to addsqlusers to set the azure firewall rule
 - added the ability to add sqlusers to the Azure-Database (Swagger GetAddSqlDbUser), so that Admins can connect via SSMS or Azure Data Studio 
 - added a "JoinGroup" function to the Groupscontroller
